# gen-ai-software-engineering

homework-1/: .gitignore  HOWTORUN.md  README.md  mise.toml  (+1 more)
homework-2/: .gitignore  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  OPERATIONS_RUNBOOK.md  README.md  TESTING_GUIDE.md  mise.toml  pyproject.toml
homework-2/src/: database.py  main.py
homework-2/src/models/: ticket.py
homework-2/src/routers/: tickets.py
homework-2/src/services/: classification_service.py  import_service.py  ticket_service.py
homework-2/tests/: conftest.py  test_categorization.py  test_import_csv.py  test_import_json.py  test_import_xml.py  test_integration.py  test_performance.py  test_ticket_api.py  test_ticket_model.py
homework-2/tests/fixtures/: invalid_tickets.csv  invalid_tickets.json  invalid_tickets.xml  sample_tickets.csv  sample_tickets.json  sample_tickets.xml
homework-4/: HOWTORUN.md  README.md  mise.toml  pyproject.toml  run-pipeline.sh
homework-4/.claude/: settings.json
homework-4/.claude/agents/: bug-fixer.agent.md  research-verifier.agent.md  security-verifier.agent.md  unit-test-generator.agent.md
homework-4/.claude/skills/research-quality-measurement/: SKILL.md
homework-4/.claude/skills/unit-tests-first/: SKILL.md
homework-4/context/: README.md
homework-4/context/bugs/001-task-api-defects/: bug-context.md  fix-summary.md  implementation-plan.md  security-report.md  test-report.md
homework-4/context/bugs/001-task-api-defects/research/: codebase-research.md  verified-research.md
homework-4/src/task_tracker_api/: __init__.py  main.py  models.py  store.py
homework-4/tests/: conftest.py  test_main.py
homework-5/custom-mcp-server/: README.md  lorem-ipsum.md  mise.toml  pyproject.toml  server.py
homework-6/: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  HOWTORUN.md  README.md  TASKS.md  agents.md  mise.toml  orchestrator.py  pyproject.toml  pytest.ini  requirements.txt  research-notes.md  specification-TEMPLATE-hint.md  specification.md  webapp.py
homework-6/.claude/: settings.json
homework-6/.claude/agents/: docs-writer.md  pipeline-builder.md  spec-writer.md  test-writer.md
homework-6/.claude/commands/: run-pipeline.md  validate-transactions.md  write-spec.md
homework-6/.claude/hooks/: check-coverage.sh
homework-6/docs/: presentation-outline.md
homework-6/frontend/: app.js  index.html  styles.css
homework-6/mcp/: server.py
homework-6/pipeline/: __init__.py  common.py  compliance_checker.py  fraud_detector.py  validator.py
homework-6/tests/: conftest.py  test_common.py  test_compliance_checker.py  test_fraud_detector.py  test_mcp_server.py  test_pipeline_integration.py  test_validator.py
(+14 files in other folders)
