[project]
name = "homework-2"
version = "0.1.0"
description = "FastAPI customer support ticket API with multi-format import and classification"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi[standard]>=0.136.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.13",
    "ty>=0.0.38",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "B008"]  # assert in tests; FastAPI Query() pattern

[tool.pytest.ini_options]
pythonpath = ["."]
