[project]
name = "transaction-processing-pipeline"
version = "0.1.0"
description = "File-based, three-stage transaction processing pipeline capstone (validation, fraud detection, compliance check) with a dashboard and a custom MCP server."
readme = "README.md"
authors = [
    { name = "Yurii Habrusiev", email = "yuriihabrusiev@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "starlette>=1.3.1",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.13",
    "ty>=0.0.38",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
