[project]
name = "custom-mcp-server"
version = "0.1.0"
description = "A custom MCP server built with FastMCP that serves lorem-ipsum text via a Resource and a Tool."
readme = "README.md"
authors = [
    { name = "Yurii Habrusiev", email = "yuriihabrusiev@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
